--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "precommit": "yarn build && run-p tsc lint format",
     "prepush": "yarn precommit && run-p test test:e2e",
     "publish:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
-    "upgrade:all": "yarn upgrade-interactive --latest"
+    "upgrade:all": "find . -type f -name 'package.json' -not -path './.git/*' -not -path '*/node_modules/*' -execdir ncu --upgrade \\;"
   },
   "workspaces": [
     "packages/*",
@@ -49,6 +49,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "husky": "^3.0.2",
     "lerna": "^3.16.4",
+    "npm-check-updates": "^3.1.23",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "stylelint": "^10.1.0",
