--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/circular-dependency-plugin": "^5.0.0",
     "@types/expect-puppeteer": "^3.3.1",
     "@types/jest": "^24.0.18",
     "@types/jest-environment-puppeteer": "^4.3.1",
