--- a/packages/react-form-with-constraints-material-ui/package.json
+++ b/packages/react-form-with-constraints-material-ui/package.json
@@ -19,21 +19,17 @@
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "dist/",
     "lib/",
     "lib-es5/"
   ],
   "sideEffects": false,
   "scripts": {
-    "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache LICENSE",
+    "clean": "rm -rf lib lib-es5 coverage LICENSE",
     "tsc": "tsc",
     "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "dist": "yarn dist:dev && yarn dist:prod",
-    "dist:dev": "NODE_ENV=development rollup --config",
-    "dist:prod": "NODE_ENV=production rollup --config",
-    "prepublishOnly": "yarn clean && yarn build && yarn dist",
+    "prepublishOnly": "yarn clean && yarn build",
     "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm LICENSE",
     "test": "jest --verbose",
@@ -57,10 +53,6 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-form-with-constraints": "^0.14.0",
-    "rollup": "^1.21.4",
-    "rollup-plugin-filesize": "^6.2.0",
-    "rollup-plugin-typescript2": "^0.24.2",
-    "rollup-plugin-uglify": "^6.0.3",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
