--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "clean:node_modules": "find . \\( -name 'node_modules' -or -name 'yarn.lock' -or -name 'yarn-error.log' \\) -prune -exec rm -rf '{}' +",
     "clean": "rm -f lerna-debug.log && lerna run clean",
     "clean:all": "yarn clean && yarn clean:lerna && yarn clean:node_modules",
-    "tsc": "lerna run tsc",
     "build": "lerna run build",
     "dist": "lerna run dist",
     "prepublishOnly": "lerna run prepublishOnly",
@@ -13,13 +12,14 @@
     "test:e2e": "lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
     "format": "prettier --write \"**/*\"",
-    "lint": "run-p eslint stylelint",
+    "lint": "run-p tsc eslint stylelint",
+    "tsc": "lerna run tsc",
     "eslint": "eslint . '**/*.{js,jsx,ts,tsx}'",
     "stylelint": "stylelint '**/*.scss'",
-    "precommit": "yarn build && run-p tsc lint format",
-    "prepush": "yarn precommit && run-p test test:e2e",
+    "precommit": "yarn build && run-p lint format",
+    "prepush": "run-p test test:e2e",
     "publish:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
-    "upgrade:all": "find . -type f -name 'package.json' -not -path './.git/*' -not -path '*/node_modules/*' -execdir ncu --upgrade \\;"
+    "npm:update": "find . -type f -name 'package.json' -not -path './.git/*' -not -path '*/node_modules/*' -execdir npx npm-check-updates --upgrade \\;"
   },
   "workspaces": [
     "packages/*",
