--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -23,26 +23,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^35.0.0",
+    "expo": "^36.0.2",
     "lodash": "^4.17.15",
-    "react": "16.8.3",
+    "react": "^16.13.0",
     "react-form-with-constraints": "../../packages/react-form-with-constraints",
     "react-form-with-constraints-native": "../../packages/react-form-with-constraints-native",
     "react-form-with-constraints-tools": "../../packages/react-form-with-constraints-tools",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-typescript": "^7.6.0",
-    "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.139",
-    "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.15",
-    "@types/react-test-renderer": "^16.9.0",
-    "babel-preset-expo": "^7.0.0",
-    "expo-cli": "^3.1.2",
-    "jest-expo": "^35.0.0",
-    "react-test-renderer": "16.8.3",
-    "typescript": "^3.6.3"
+    "@babel/core": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.3",
+    "@types/lodash": "^4.14.149",
+    "@types/react": "^16.9.23",
+    "@types/react-native": "^0.61.17",
+    "@types/react-test-renderer": "^16.9.2",
+    "babel-preset-expo": "^8.0.0",
+    "expo-cli": "^3.13.1",
+    "jest-expo": "^36.0.1",
+    "react-test-renderer": "^16.13.0",
+    "typescript": "^3.8.2"
   }
 }
