--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -36,28 +36,28 @@
   },
   "peerDependencies": {
     "react-form-with-constraints": "^0.14.0",
-    "react-native": ">=0.59.8"
+    "react-native": ">=0.61.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.18",
+    "@babel/core": "^7.8.6",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.3",
     "@types/jscodeshift": "^0.6.3",
-    "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.15",
-    "@types/react-test-renderer": "^16.9.0",
-    "babel-jest": "^24.9.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "jest": "^24.9.0",
-    "jscodeshift": "^0.6.4",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react": "16.8.6",
+    "@types/react": "^16.9.23",
+    "@types/react-native": "^0.61.17",
+    "@types/react-test-renderer": "^16.9.2",
+    "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^25.1.0",
+    "jscodeshift": "^0.7.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react": "^16.13.0",
     "react-form-with-constraints": "^0.14.0",
-    "react-native": "^0.60.6",
-    "react-test-renderer": "16.8.6",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.6.3"
+    "react-native": "^0.61.5",
+    "react-test-renderer": "^16.13.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.2"
   }
 }
