--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "esModuleInterop": false,
     "resolveJsonModule": true,
+    "isolatedModules": true,
     "noLib": false,
     "lib": ["dom", "dom.iterable", "esnext"],
 
