--- a/packages/react-form-with-constraints/tsconfig.lib.json
+++ b/packages/react-form-with-constraints/tsconfig.lib.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "noEmit": false,
     "outDir": "lib",
-    "declaration": true
+    "declaration": true,
+    "sourceMap": true,
+    "inlineSources": true
   },
   "include": []
 }
