--- a/examples/HTML5ConstraintValidationAPI/package.json
+++ b/examples/HTML5ConstraintValidationAPI/package.json
@@ -23,13 +23,14 @@
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/node": "^13.7.6",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/webpack": "^4.41.6",
+    "babel-loader": "^8.1.0",
     "file-loader": "^5.1.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2",
