--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "precommit": "yarn build && run-p lint format",
     "prepush": "run-p test test:e2e",
     "publish:next:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
-    "npm:update": "find . -type f -name 'package.json' -not -path './.git/*' -not -path '*/node_modules/*' -execdir npx npm-check-updates --upgrade \\;"
+    "npm:update": "yarn clean:all && find . -type f -name 'package.json' -not -path './.git/*' -not -path '*/node_modules/*' -execdir npx npm-check-updates --upgrade \\; && yarn"
   },
   "workspaces": [
     "packages/*",
