--- a/examples/ReactNative/app.json
+++ b/examples/ReactNative/app.json
@@ -1,7 +1,6 @@
 {
   "expo": {
     "name": "React Native example",
-    "slug": "react-native-example",
-    "sdkVersion": "36.0.0"
+    "slug": "react-native-example"
   }
 }
