--- a/examples/ReactNative/tsconfig.json
+++ b/examples/ReactNative/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "target": "es2015",
+    "jsx": "react-native",
     "esModuleInterop": true
   }
 }
