--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-unicorn": "^23.0.0",
     "husky": "^4.3.0",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
